force-app/main/default/objects/Query_Builder_Detail__mdt/Query_Builder_Detail__mdt.object-meta.xml
<CustomObject>
    <label>Query Builder Detail</label>
    <pluralLabel>Query Builder Details</pluralLabel>
</CustomObject>