force-app/main/default/objects/Query_Builder_Detail__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>Query_Builder_Detail__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Query_Builder_Fields</relationshipLabel>
    <relationshipName>Query_Builder_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>