force-app/main/default/objects/Query_Builder_Detail__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <metadataRelationshipControllingField>Query_Builder_Detail__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Query_Builder_Details</relationshipLabel>
    <relationshipName>Query_Builder_Details</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>