force-app/main/default/objects/Query_Builder_Detail__mdt/fields/Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value__c</fullName>
    <label>Filter Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>