force-app/main/default/objects/Query_Builder_Detail__mdt/fields/Filtered_Field__c.field-meta.xml
<CustomField>
    <fullName>Filtered_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filtered Field</label>
    <type>Checkbox</type>
</CustomField>