force-app/main/default/objects/Query_Builder_Detail__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Query_Builder_Objects</relationshipLabel>
    <relationshipName>Query_Builder_Objects</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>