force-app/main/default/objects/Query_Builder_Detail__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIKE</fullName>
                <default>true</default>
                <label>LIKE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>