force-app/main/default/objects/Query_Builder_Detail__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <inlineHelpText>Enter the profiles separated by comma.</inlineHelpText>
    <label>Profile Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>