force-app/main/default/objects/Query_Builder_Detail__mdt/fields/Selected_Field__c.field-meta.xml
<CustomField>
    <fullName>Selected_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected Field</label>
    <type>Checkbox</type>
</CustomField>